--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Jahir M. - Image Processing Final Project
+description: Final Project for [USP-SCC 0251/ Processamento de Imagens] course
