--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: Image Processing Project
-description: Final Project for [USP-SCC 0251/ Processamento de Imagens] course by Jahir M.
+title: Comparison of Image Enhancement Techniques applied to Sound Data Retrive ( from Images )
+description: Final Project for ***USP-SCC 0251/ Processamento de Imagens*** course by Jahir M.
