--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-slate
 title: Sound Visualization using Hilbert Curves
 description: Final Project for [USP-SCC 0251/ Processamento de Imagens] course by Jahir M.
